--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
 @import "tailwindcss";
+
+/* Attiva la dark mode basata sulla classe `.dark` */
+@custom-variant dark (&:where(.dark, .dark *));
+@import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
+
+body {
+  padding: 2rem;
+}
+/* Chrome / Edge / Safari */
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  appearance: none;
+}
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
