--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,9 @@
 
 @custom-variant dark (&:is(.dark *));
 
-body {
+/* body {
   padding: 2rem;
-}
+} */
 /* Chrome / Edge / Safari */
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
