--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,18 @@
 @custom-variant dark (&:is(.dark *));
 
 /* Chrome / Edge / Safari */
+:root {
+  --sb-track: #ffffff; /* track chiara in light */
+  --sb-thumb: #b0b0b0;
+}
+html.dark {
+  --sb-track: #141414; /* track scura in dark */
+  --sb-thumb: #2a2a2a;
+}
+*::-webkit-scrollbar {
+  width: 2px;
+  height: 10px;
+}
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
   appearance: none;
